# wordleapi

./: .env.default  .env.inte  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  openapi.json  pyproject.toml  pytest.ini
.github/workflows/: build-and-test.yml  lint.yml  test.yml  unit-test.yml  update_dot_env.yml  workflow.yml
assets/: words_6_fr.txt  words_7_fr.txt  words_8_fr.txt
tests/: test_compute_guess_result.py  test_get_today_word.py  test_load_wordlefile.py  test_now_yyyymmdd.py  test_pick_random_element.py  test_strip_lower.py  test_validate_guess.py
tests/inte/: test_attempt_endpoint.py  test_guess_endpoint.py
tests/unit/: test_compute_attempt_result.py  test_get_today_word.py  test_load_whitelistfile.py  test_now.py  test_strip_lower.py  test_validate_attempt.py  test_validate_guess.py
tests/unit/data/: whitelist_6_fr.txt
wordleapi/: __init__.py  api.py  core.py  env.py  utils.py  wsgi.py
wordleapi/db/: model.py
