[tool.poetry]
name = "wordleapi"
version = "0.1.0"
description = "Wordle game back-end"
authors = ["frechousky <alexandre.freche@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "~2.3.2"
python-dotenv = "~1.0.0"
loguru = "~0.7.0"
pytz = "~2023.3"
flask-sqlalchemy = "~3.0.5"

[tool.poetry.group.dev.dependencies]
click = "^8.1.6"
pre-commit = "^3.3.3"

[tool.poetry.group.test.dependencies]
pytest = "~7.4.0"
freezegun = "~1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
